<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name"> Digital Register</string>

    <string name="home">Home</string>
    <string name="create_new_register">Create New Register</string>
    <string name="how_to_use">How to Use Digital Register</string>
    <string name="new_register">New Register</string>
    <string name="view_our_popular_templates">Use popular register templates</string>
    <string name="view_all">View All</string>

    <string name="rename_file">Rename File</string>
    <string name="enter_new_name">Enter New Name</string>
    <string name="new_name">New Name</string>
    <string name="save">Save</string>
    <string name="share_pdf">Share this as PDF</string>
    <string name="delete_file">Delete File</string>
    <string name="column">Column</string>

    <string name="rename_column">Rename Column</string>
    <string name="change_type">Change Column Type</string>
    <string name="text">Text</string>
    <string name="numbers">Numbers</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="rupees">Rupees</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="yes_no">Yes/No</string>
    <string name="check_box">Checkbox</string>
    <string name="show_total">Show Total</string>
    <string name="setformula">Set Formula</string>
    <string name="delete_column">Delete Column</string>


    <string name="template">Template</string>
    <string name="click_template">Click any card to see the template</string>
    <string name="shop">Shop</string>
    <string name="cashbook">Cashbook</string>
    <string name="payment_received">Payment received</string>
    <string name="household">Household</string>
    <string name="grocery">Grocery List</string>
    <string name="daily_spend">Daily Spend</string>
    <string name="teachers">Teachers</string>
    <string name="fee_register">Fee Register</string>
    <string name="stationary_register">Stationary Register</string>
    <string name="student_marks">Student Marks</string>
    <string name="student">Student</string>
    <string name="topic_name">Topic Name</string>
    <string name="homework">Homework</string>
    <string name="health_fitness">Health and Fitness</string>
    <string name="diet_plan">Diet Plan</string>
    <string name="workout_plan">Workout Plan</string>
    <string name="cabs_transport">Cabs and Transport</string>
    <string name="trip_register">Trip Register</string>
    <string name="car_service">Car Service</string>
    <string name="wedding">Wedding</string>
    <string name="guest">Guest List</string>
    <string name="food_menu">Food Menu</string>
    <string name="expenditure_list">Expenditure List</string>
    <string name="orders">Orders</string>
    <string name="sell_register">Sell Register</string>


    <string name="change_lang">Change Language</string>
    <string name="enablefpl">Enable Fingerprint Lock</string>
    <string name="disablefpl">Disable Fingerprint Lock</string>
    <string name="help">Help &amp; Feedback</string>
    <string name="share_app">Share app</string>
    <string name="pdf_vip" tools:ignore="MissingTranslation">PDF VIP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="salary_book">Salary Book</string>
    <string name="attendance">Attendance</string>
    <string name="timetable">Time Table</string>
    <string name="classnotes">Class Notes</string>
    <string name="cashsplitting">Cash Splitting</string>
    <string name="courseplanning">Course Planning</string>
    <string name="importantdates">Important Dates</string>
    <string name="examshedule">Exams Schedule</string>


    <string name="congratulations">Congratulations!</string>
    <string name="you_get_exclusive_access_to_pdf_vip">You get exclusive access to PDF VIP</string>
    <string name="now_you_get_access_to">Now you get access to</string>
    <string name="digital_register_brand_free_pdf_amp_add_your_own_business_details"><![CDATA[Digital Register brand free PDF & add your own business details]]></string>
    <string name="digital_register_branding_on_pdf_vip">Digital Register branding on PDF VIP</string>
    <string name="you_can_add_digital_register_branding_on_pdf_vip">You can add Digital Register branding on PDF VIP</string>
    <string name="digital_register_branding">Digital Register branding</string>
    <string name="business_details_on_pdf_vip">Business Details on PDF VIP</string>
    <string name="remove">Remove</string>
    <string name="business_name">Business Name</string>
    <string name="business_address">Business Address</string>
    <string name="add">Add</string>

    <string name="unlock_access_to_pdf_vip">Unlock Access to PDF VIP</string>
    <string name="more_details">More details</string>
    <string name="share_digital_register_with_3_friends_to">Share Digital Register with 3 Friends to</string>
    <string name="remove_digital_register_branding_on_pdf">Remove Digital Register branding on PDF</string>
    <string name="add_your_business_details_on_pdf">Add your Business Details on PDF</string>
    <string name="ask_your_3_friends_to_login_with_your_invite_link_and_create_at_least_3_registers">Ask your 3 friends to login with your invite link and create at least 3 registers</string>
    <string name="share_invite_link">Share Invite link</string>
    <string name="status">Status</string>
    <string name="download_and_login">Download and Login</string>
    <string name="_0_3">0/3</string>
    <string name="create_at_least_3_registers">Create at least 3 Registers</string>
    <string name="unlock">Unlock</string>
    <string name="how_it_works">How it works</string>

    <string name="benefits_of_sharing_digital_register">Benefits of sharing Digital Register</string>
    <string name="_1_remove_digital_register_branding_on_pdf">1. Remove Digital Register branding on PDF</string>
    <string name="_2_add_your_business_name_address_and_mobile_number_on_pdf">2. Add your business name, address, and mobile number on PDF</string>
    <string name="_2_steps_to_unlock">2 steps to unlock</string>
    <string name="_1_share_your_invite_link_with_3_friends">1. Share your INVITE LINK with 3 friends</string>
    <string name="_2_ask_them_to_login_and_create_at_least_3_registers">2. Ask them to LOGIN and CREATE AT LEAST 3 Registers</string>
    <string name="reminder">Reminder</string>
    <string name="Rename">Rename</string>
    <string name="Share_as_Pdf">Share as pdf</string>
    <string name="Download_pdf">Download pdf</string>
    <string name="Delete">Delete</string>


    <!-- TODO: Remove or change this placeholder text
    <string name="hello_blank_fragment">Hello blank fragment</string> -->
</resources>