<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#100F0BEE"
    android:orientation="vertical"
    >
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="188dp"
                    android:layout_height="19dp"
                    android:text="@string/unlock_access_to_pdf_vip"
                    android:layout_margin="10dp"
                    android:textColor="#000000"
                    android:textSize="16dp"
                    android:textStyle="bold"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/more_details"
                    android:text="@string/more_details"
                    android:textColor="#0F0BEE"
                    android:textSize="12dp"
                    android:textStyle="bold"
                    android:layout_margin="10dp"
                    android:layout_alignParentRight="true"
                    />
            </RelativeLayout>
            <TextView
                android:layout_width="260dp"
                android:layout_height="20dp"
                android:text="@string/share_digital_register_with_3_friends_to"
                android:textColor="#95000000"
                android:textSize="14dp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                >
                <TextView
                    android:layout_width="163dp"
                    android:layout_height="40dp"
                    android:text="@string/remove_digital_register_branding_on_pdf"
                    android:textStyle="bold"
                    android:textSize="15dp"
                    android:textColor="#FF0000"
                    android:textAlignment="center"
                    android:layout_marginLeft="30dp"
                    />
                <TextView
                    android:layout_width="126dp"
                    android:layout_height="40dp"
                    android:text="@string/add_your_business_details_on_pdf"
                    android:textStyle="bold"
                    android:textSize="15dp"
                    android:textColor="#FF0000"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="30dp"
                    android:textAlignment="center"
                    />
            </RelativeLayout>

            <TextView
                android:layout_width="267dp"
                android:layout_height="32dp"
                android:text="@string/ask_your_3_friends_to_login_with_your_invite_link_and_create_at_least_3_registers"
                android:textColor="#90000000"
                android:textSize="12dp"
                android:textStyle="normal"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                />
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="3dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                > <Button
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:id="@+id/share_referral"
                android:text="@string/share_invite_link"
                android:background="#0F0BEE"
                android:textColor="#FFFFFF"
                />

            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/status"
                android:textColor="#90000000"
                android:textSize="12dp"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:weightSum="100"
                android:background="#FFFFFF">
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="60"
                    android:layout_margin="5dp"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/download_and_login"
                            android:textColor="#000000"
                            android:textSize="15dp"
                            android:textStyle="bold"
                            android:textAlignment="center"
                            android:layout_gravity="center"
                            android:layout_marginTop="34dp"
                            />
                        <TextView
                            android:id="@+id/logCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:text="@string/_0_3"
                            android:textSize="40dp"
                            android:textColor="#FF0000"
                            android:layout_gravity="center"
                            android:textAlignment="center"
                            />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="40"
                    android:layout_margin="5dp"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/create_at_least_3_registers"
                            android:textColor="#000000"
                            android:textSize="15dp"
                            android:textStyle="bold"
                            android:textAlignment="center"
                            android:layout_gravity="center"
                            android:layout_marginTop="34dp"
                            />
                        <TextView
                            android:id="@+id/register"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:text="@string/_0_3"
                            android:textSize="40dp"
                            android:textColor="#FF0000"
                            android:layout_gravity="center"
                            android:textAlignment="center"
                            />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/business_details_on_pdf_vip"
                android:textColor="#95000000"
                android:textSize="14dp"
                android:textStyle="bold"
                android:layout_marginLeft="15dp"
                android:layout_gravity="start"
                android:layout_marginTop="15dp"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_business_center_24"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/business_name"
                    android:textColor="#000000"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="40dp"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:text="@string/unlock"
                    android:textStyle="bold"
                    android:textSize="14dp"
                    android:background="#200F0BEE"
                    android:textColor="#0F0BEE"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_margin="20dp"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_business_24"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/business_address"
                    android:textColor="#000000"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="40dp"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:text="@string/unlock"
                    android:textStyle="bold"
                    android:textSize="14dp"
                    android:background="#200F0BEE"
                    android:textColor="#0F0BEE"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="20dp"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_call_24"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mobile_number"
                    android:id="@+id/mobile_number"
                    android:textColor="#000000"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    android:gravity="top"
                    android:layout_marginLeft="40dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="15dp"
                    android:layout_below="@+id/mobile_number"
                    android:text=""
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:layout_marginLeft="40dp"
                    android:layout_alignParentBottom="true"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_alignParentRight="true"
                    android:text="@string/unlock"
                    android:textStyle="bold"
                    android:textSize="14dp"
                    android:background="#200F0BEE"
                    android:textColor="#0F0BEE"/>
            </RelativeLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>
</ScrollView>