<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment"
    android:id="@+id/clayout">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="40dp"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:id="@+id/new_document"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:backgroundTint="#263CFF"
            android:gravity="center"
            android:background="@drawable/corners"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="40dp"
                android:layout_height="40dp"

                android:layout_centerVertical="true"

                app:srcCompat="@drawable/ic_baseline_add_circle_24"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="2dp"
                android:layout_toEndOf="@+id/imageView"
                android:layout_toRightOf="@+id/imageView"
                android:text="@string/create_new_register"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:id="@+id/createNewRegister"
                android:textSize="15sp"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/homePageTemplateRelativeLayoutZerSize"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@id/new_document"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/popularTemplatesZeroSize"
                android:textSize="15sp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/view_our_popular_templates"
                android:layout_marginBottom="10dp"
                android:padding="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="false"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="55dp"
                android:background="@android:color/transparent"
                android:text="@string/view_all"
                android:textAlignment="center"
                android:textSize="15sp"
                android:id="@+id/viewMoreButtonZeroSize"
                android:textColor="@android:color/holo_blue_dark"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/homePageTemplateRecyclerViewZeroSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/popularTemplatesZeroSize"
                android:layout_marginTop="10dp"/>

        </RelativeLayout>
    </RelativeLayout>



<!--    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:gravity="center"-->
<!--        app:showFullScreenButton="true"-->
<!--        app:showSeekBar="true"-->
<!--        app:autoPlay="true"-->
<!--        android:visibility="gone"-->
<!--        android:id="@+id/videoplayer"-->
<!--        app:videoId="3uIVlLEfah8"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/relativeLayout"-->
<!--        app:layout_constraintStart_toStartOf="parent"/>-->


<!--    <RelativeLayout-->
<!--        android:layout_marginBottom="50dp"-->
<!--        android:id="@+id/youtube"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="55dp"-->
<!--        android:padding="40dp"-->
<!--        android:backgroundTint="#263CFF"-->
<!--        android:gravity="center"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        android:background="@drawable/corners"-->
<!--        app:layout_constraintTop_toBottomOf="@id/relativeLayout"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        >-->

<!--        <ImageView-->
<!--            android:id="@+id/image"-->

<!--            android:layout_width="35dp"-->
<!--            android:layout_height="35dp"-->
<!--            android:layout_centerVertical="true"-->
<!--            app:srcCompat="@drawable/youtube_icon"-->
<!--            tools:ignore="VectorDrawableCompat" />-->

<!--        <TextView-->
<!--            android:paddingStart="5dp"-->
<!--            android:layout_toEndOf="@id/image"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_centerVertical="true"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/how_to_use"-->
<!--            android:textColor="#ffffff"-->
<!--            android:textSize="15sp"/>-->

<!--    </RelativeLayout>-->


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/homerecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>